# PwP_Lab6

./: CMakeLists.txt  README.md
KN_PwP_lab6/: CMakeLists.txt
KN_PwP_lab6/modul1/: CMakeLists.txt  modul1.py
Modul_KN/: CMakeLists.txt  Modul_KN.py
